# moyu-server-emu

./: .gitignore  README.md
.github/workflows/: rust.yml
server/: .dockerignore  .env.docker  Cargo.toml  Dockerfile  docker-compose.yml
server/docker/mosquitto/: create_certs.sh  mosquitto.conf
server/entities/: Cargo.toml
server/entities/src/: chat_record.rs  device_data.rs  lib.rs  prelude.rs  user_data.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20240222_001_create_user_data_table.rs  m20240222_002_create_device_data_table.rs  m20240222_003_create_chat_history_table.rs
server/openai/: Cargo.toml
server/openai/src/: openai.rs
server/requests/: app-requests.http  device-requests.http  voice-requests.http
server/src/: main.rs
server/src/common/services/: device.rs  file.rs  history.rs  mod.rs  mqtt.rs  user.rs
server/src/endpoints/: common.rs  errors.rs  language.rs  mod.rs  models.rs  qa.rs
server/src/endpoints/alicloud/: models.rs  resource.rs
server/src/endpoints/app/: common.rs  mod.rs
server/src/endpoints/app/device/: misc.rs  mod.rs  models.rs  resource.rs  soundwave.rs
server/src/endpoints/app/user/: models.rs  resource.rs
server/src/endpoints/app/version/: models.rs  resource.rs
server/src/endpoints/outer/: mod.rs
server/src/endpoints/outer/device/: middlewares.rs  misc.rs  mod.rs  models.rs  resource.rs
server/src/endpoints/outer/speech/: mod.rs  models.rs  resource.rs
server/src/opus/: container.rs  mod.rs  models.rs
slides/: .gitignore  Gemfile  build.py  custom-style.css
(+12 files in other folders)
