[package]
name = "moyu-server-emulator"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entities", "migration", "openai"]

[dependencies]
entities = { path = "entities" }
migration = { path = "migration" }
openai = { path = "openai" }

axum = { version = "0.8.1", features = ["multipart", "macros"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }

tokio = { version = "1.44.0", features = ["full"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

hyper = "1.6.0"
hyper-util = "0.1.10"

tower-service = "0.3.3"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
serde_with = "3.12.0"

chrono = { version = "0.4.40", features = ["serde"] }

sea-orm = { version = "1.1.7", features = ["runtime-tokio-native-tls", "sqlx-postgres", "macros"], default-features = false }

paho-mqtt = "0.13.1"

hound = "3.5.1"

# misc
bytes = "1.10.1"
crc = "3.2.1"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.25"
md5 = "0.7.0"
rand = "0.9.0"
sha1 = "0.10.6"
uuid = { version = "1.15.1", features = ["v4", "fast-rng"] }
